--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "mime": "^2.2.0",
+    "webpack-cli": "^3.3.12",
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
-    "webpack": "^3.10.0",
+    "webpack": "^4.43.0",
     "webpack-dev-middleware": "^2.0.4",
-    "webpack-dev-server": "^2.11.1",
+    "webpack-dev-server": "^3.11.0",
     "webpack-hot-middleware": "^2.21.0"
   }
 }
