--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.4",
+    "dev-server": "^0.1.0",
     "express": "^4.16.2",
+    "fs": "^0.0.1-security",
     "mime": "^2.2.0",
     "webpack-cli": "^3.3.12",
     "whatwg-fetch": "^2.0.3"
